misc/kube.efk/event-exporter.role.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
