misc/kube.efk/elasticsearch.pod.cm.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: elasticsearch
  labels:
    yaml: elasticsearch
spec:
  containers:
  - env:
    - name: discovery.type
      value: single-node
    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.1
    name: elasticsearch
    volumeMounts:
    - name: es-conf-volume
      mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
      subPath: elasticsearch.yml
  volumes:
    - name: es-conf-volume
      configMap:
        name: es-conf
