misc/kube.efk/kibana.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
spec:
  ingressClassName: nginx
  rules:
  - host: k.k
    http:
      paths:
      - path: /
#     - path: /app/home
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
